--- a/index.html
+++ b/index.html
@@ -481,6 +481,9 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.1.6/purify.min.js"></script>
-  <script src="app.js"></script>
+  <script src="init.js"></script>
+  <script src="utils.js"></script>
+  <script src="main.js"></script>
+  <script src="events.js"></script>
 </body>
 </html>
