--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
             min-height: 100vh;
             padding-top: 140px;
             padding-bottom: 140px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
         }
         #messages {
             display: flex;
@@ -50,7 +47,7 @@
         }
         #messages.waiting {
             background-color: transparent;
-            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG');
+            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG?sanitize=true');
         }
         .corner-logo {
             position: absolute;
@@ -58,7 +55,7 @@
             right: 10px;
             width: 256px;
             height: 256px;
-            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logo.png');
+            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logo.png?sanitize=true');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
@@ -66,13 +63,10 @@
             transition: background-image 0.5s ease;
         }
         .corner-logo.wink {
-            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logoWink.png');
+            background-image: url('https://raw.githubusercontent.com/Cooptroop1/anonmess/main/corner%20logoWink.png?sanitize=true');
         }
         .bg-white {
             z-index: 10;
-            max-width: 500px;
-            width: 100%;
-            margin: 0 auto;
         }
         @media (min-width: 641px) and (max-width: 1024px) {
             .corner-logo {
@@ -80,13 +74,6 @@
             }
         }
         @media (max-width: 640px) {
-            body {
-                padding-top: 80px;
-                padding-bottom: 80px;
-            }
-            .bg-white {
-                padding: 1rem;
-            }
             .corner-logo {
                 position: absolute;
                 top: 10px;
@@ -104,13 +91,13 @@
                 z-index: 1000;
             }
             #maxClientsContainer {
-                position: relative;
-                bottom: auto;
-                left: auto;
-                transform: none;
+                position: absolute;
+                bottom: -335px;
+                left: 50%;
+                transform: translateX(-50%);
                 width: 100%;
                 max-width: 360px;
-                margin: 0 auto;
+                margin: 0;
                 padding: 0.75rem;
                 background-color: #000000;
                 border-radius: 0.5rem;
@@ -142,6 +129,30 @@
             #maxClientsRadios button:disabled {
                 opacity: 0.6;
                 cursor: not-allowed;
+            }
+            /* Fix mobile button alignment and chat box crushing */
+            .button-group {
+                flex-direction: column !important;
+                align-items: center;
+                justify-content: center;
+                gap: 0.5rem;
+                margin: 0.5rem 0;
+                width: 100%;
+            }
+            .button-group button {
+                width: 100%;
+                max-width: none;
+                margin: 0 !important;
+                padding: 0.8rem 0.9rem;
+                font-size: 0.9rem;
+            }
+            #messages {
+                width: 100%;
+                max-width: none;
+            }
+            .bg-white {
+                width: 100%;
+                max-width: none;
             }
         }
         .message-bubble {
@@ -427,83 +438,76 @@
                 cursor: not-allowed;
             }
         }
-        #privacyStatus {
-            text-align: center;
-            font-size: 0.875rem;
-            color: #10b981;
-            margin-bottom: 0.5rem;
-        }
     </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
-    <div class="corner-logo" id="cornerLogo" role="img" aria-label="Anonomoose Chat logo"></div>
-    <div class="flex w-full max-w-xl mx-auto">
-        <div class="bg-white p-8 rounded-lg shadow-lg flex-grow">
-            <h1 class="text-3xl font-bold mb-8 text-center text-gray-800">Anonomoose Chat</h1>
-            <div id="status" class="text-center mb-4 text-gray-600" role="status" aria-live="polite">Start a new chat or connect to an existing one</div>
-            <div id="privacyStatus" class="hidden text-center mb-4 text-green-500 text-sm" role="status" aria-live="polite">E2E Encrypted (P2P)</div>
-            <div id="initialContainer">
-                <button id="startChatToggleButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full mb-2 hover:bg-blue-600 transition-colors" aria-label="Start a new chat">Start Chat</button>
-                <button id="connectToggleButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600 transition-colors" aria-label="Connect to an existing chat">Connect to Chat</button>
-            </div>
-            <div id="usernameContainer" class="hidden">
-                <label for="usernameInput" class="sr-only">Enter your username</label>
-                <input id="usernameInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)" aria-describedby="usernameHelp" maxlength="16">
-                <div id="usernameHelp" class="text-sm text-gray-600 mb-2">Username must be 1-16 alphanumeric characters</div>
-                <button id="joinWithUsernameButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full hover:bg-blue-600 transition-colors" aria-label="Join chat with username">Join Chat</button>
-                <button id="backButton" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors" aria-label="Back to main menu">Back</button>
-            </div>
-            <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden" role="region" aria-live="polite"></div>
-            <div id="chatContainer" class="hidden">
-                <button id="newSessionButton" class="bg-red-500 text-white px-2 py-1 rounded w-full mb-1 hover:bg-red-600 transition-colors hidden" aria-label="Start a new session">New Session</button>
-                <div class="button-group">
-                    <button id="button1" aria-label="Send code to random chat board">Send Code</button>
-                    <button id="button2" aria-label="Join a random chat">Random Chat</button>
-                    <button id="copyCodeButton" aria-label="Copy chat code">Copy Code</button>
-                </div>
-                <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded" role="log" aria-live="polite"></div>
-                <div class="input-container hidden">
-                    <label for="messageInput" class="sr-only">Type a message</label>
-                    <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000" aria-describedby="messageHelp"></textarea>
-                    <div id="messageHelp" class="sr-only">Maximum 1000 characters. Press Enter to send, Shift+Enter for new line.</div>
-                    <input type="file" id="imageInput" accept="image/jpeg,image/png" style="display: none;" aria-label="Upload image" />
-                    <button id="imageButton" title="Send Image" aria-label="Send image">📷</button>
-                    <button id="sendButton" aria-label="Send message">📤</button>
-                </div>
-            </div>
-            <div id="connectContainer" class="hidden">
-                <label for="usernameConnectInput" class="sr-only">Enter your username</label>
-                <input id="usernameConnectInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)" aria-describedby="usernameConnectHelp" maxlength="16">
-                <div id="usernameConnectHelp" class="text-sm text-gray-600 mb-2">Username must be 1-16 alphanumeric characters</div>
-                <label for="codeInput" class="sr-only">Enter chat code</label>
-                <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code (xxxx-xxxx-xxxx-xxxx)" aria-describedby="codeHelp" maxlength="19">
-                <div id="codeHelp" class="text-sm text-gray-600 mb-2">Code format: xxxx-xxxx-xxxx-xxxx</div>
-                <button id="connectButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600 transition-colors" aria-label="Connect to chat">Connect</button>
-                <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors" aria-label="Back to main menu">Back</button>
-            </div>
-            <div class="text-center mt-4">
-                <button id="helpText" class="text-blue-500 hover:underline" aria-label="View help information">Help</button>
-            </div>
+  <div class="corner-logo" id="cornerLogo" role="img" aria-label="Anonomoose Chat logo"></div>
+  <div class="flex w-full max-w-xl">
+    <div class="bg-white p-8 rounded-lg shadow-lg flex-grow">
+      <h1 class="text-3xl font-bold mb-8 text-center text-gray-800">Anonomoose Chat</h1>
+      <div id="status" class="text-center mb-4 text-gray-600" role="status" aria-live="polite">Start a new chat or connect to an existing one</div>
+      <div id="initialContainer">
+        <button id="startChatToggleButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full mb-2 hover:bg-blue-600 transition-colors" aria-label="Start a new chat">Start Chat</button>
+        <button id="connectToggleButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600 transition-colors" aria-label="Connect to an existing chat">Connect to Chat</button>
+      </div>
+      <div id="usernameContainer" class="hidden">
+        <label for="usernameInput" class="sr-only">Enter your username</label>
+        <input id="usernameInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)" aria-describedby="usernameHelp" maxlength="16">
+        <div id="usernameHelp" class="text-sm text-gray-600 mb-2">Username must be 1-16 alphanumeric characters</div>
+        <button id="joinWithUsernameButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full hover:bg-blue-600 transition-colors" aria-label="Join chat with username">Join Chat</button>
+        <button id="backButton" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors" aria-label="Back to main menu">Back</button>
+      </div>
+      <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden" role="region" aria-live="polite"></div>
+      <div id="chatContainer" class="hidden">
+        <button id="newSessionButton" class="bg-red-500 text-white px-2 py-1 rounded w-full mb-1 rounded hover:bg-red-600 transition-colors hidden" aria-label="Start a new session">New Session</button>
+        <div class="button-group">
+          <button id="button1" aria-label="Send code to random chat board">Send Code</button>
+          <button id="button2" aria-label="Join a random chat">Random Chat</button>
+          <button id="copyCodeButton" aria-label="Copy chat code">Copy Code</button>
         </div>
-        <div id="maxClientsContainer" class="hidden flex flex-col justify-center bg-black p-4 rounded-lg shadow-lg">
-            <span class="text-white mb-2 font-bold">Max Users</span>
-            <div id="maxClientsRadios" class="grid grid-cols-5 gap-2" role="radiogroup" aria-label="Select maximum number of users"></div>
+        <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded" role="log" aria-live="polite"></div>
+        <div class="input-container hidden">
+          <label for="messageInput" class="sr-only">Type a message</label>
+          <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000" aria-describedby="messageHelp"></textarea>
+          <div id="messageHelp" class="sr-only">Maximum 1000 characters. Press Enter to send, Shift+Enter for new line.</div>
+          <input type="file" id="imageInput" accept="image/jpeg,image/png" style="display: none;" aria-label="Upload image" />
+          <button id="imageButton" title="Send Image" aria-label="Send image">📷</button>
+          <button id="sendButton" aria-label="Send message">📤</button>
         </div>
+      </div>
+      <div id="connectContainer" class="hidden">
+        <label for="usernameConnectInput" class="sr-only">Enter your username</label>
+        <input id="usernameConnectInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)" aria-describedby="usernameConnectHelp" maxlength="16">
+        <div id="usernameConnectHelp" class="text-sm text-gray-600 mb-2">Username must be 1-16 alphanumeric characters</div>
+        <label for="codeInput" class="sr-only">Enter chat code</label>
+        <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code (xxxx-xxxx-xxxx-xxxx)" aria-describedby="codeHelp" maxlength="19">
+        <div id="codeHelp" class="text-sm text-gray-600 mb-2">Code format: xxxx-xxxx-xxxx-xxxx</div>
+        <button id="connectButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600 transition-colors" aria-label="Connect to chat">Connect</button>
+        <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors" aria-label="Back to main menu">Back</button>
+      </div>
+      <div class="text-center mt-4">
+        <button id="helpText" class="text-blue-500 hover:underline" aria-label="View help information">Help</button>
+      </div>
     </div>
-    <div id="helpModal" class="help-modal" role="dialog" aria-label="Help information" tabindex="-1">
-        <div class="help-modal-content">
-            <h2 class="text-xl font-bold mb-4">Button Help</h2>
-            <p><strong>Start Chat:</strong> Starts New Chat</p>
-            <p><strong>Connect to Chat:</strong> This connects you to a chat that you have code for</p>
-            <p><strong>Send Code:</strong> This sends your code to Random chat board</p>
-            <p><strong>Random Chat:</strong> This takes you to random chat board for a random chat</p>
-            <p><strong>Copy Code:</strong> Copies the code so you can send to people in text or social chats</p>
-        </div>
+    <div id="maxClientsContainer" class="hidden flex flex-col justify-center bg-black p-4 rounded-lg shadow-lg">
+      <span class="text-white mb-2 font-bold">Max Users</span>
+      <div id="maxClientsRadios" class="grid grid-cols-5 gap-2" role="radiogroup" aria-label="Select maximum number of users"></div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.1.6/purify.min.js" integrity="sha512-jB0TkTBeQC9ZSkBqDhdmfTv1qdfbWpGE72yJ/01Srq6hEzZIz2xkz1e57p9ai7IeHMwEG7HpzG6NdptChif5Pg==" crossorigin="anonymous"></script>
-    <script src="utils.js"></script>
-    <script src="init.js"></script>
-    <script src="main.js"></script>
-    <script src="events.js"></script>
+  </div>
+  <div id="helpModal" class="help-modal" role="dialog" aria-label="Help information" tabindex="-1">
+    <div class="help-modal-content">
+      <h2 class="text-xl font-bold mb-4">Button Help</h2>
+      <p><strong>Start Chat:</strong> Starts New Chat</p>
+      <p><strong>Connect to Chat:</strong> This connects you to a chat that you have code for</p>
+      <p><strong>Send Code:</strong> This sends your code to Random chat board</p>
+      <p><strong>Random Chat:</strong> This takes you to random chat board for a random chat</p>
+      <p><strong>Copy Code:</strong> Copies the code so you can send to people in text or social chats</p>
+    </div>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.1.6/purify.min.js" integrity="sha512-jB0TkTBeQC9ZSkBqDhdmfTv1qdfbWpGE72yJ/01Srq6hEzZIz2xkz1e57p9ai7IeHMwEG7HpzG6NdptChif5Pg==" crossorigin="anonymous"></script>
+  <script src="utils.js"></script>
+  <script src="init.js"></script>
+  <script src="main.js"></script>
+  <script src="events.js"></script>
 </body>
 </html>
